# mcp-shield

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml
.github/workflows/: ci.yml
docs/: threat-model.md
examples/malicious_mcp_server/: server.py
examples/safe_mcp_server/: server.py
policies/: default.yaml  strict.yaml
runtime/: audit_logger.py  cli.py  models.py  policy_engine.py  risk_scorer.py
runtime/api/: main.py
runtime/sandbox/: base.py  docker_backend.py
runtime/static/: dashboard.html
tests/: test_policy_engine.py
