[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpshield-runtime"
version = "0.1.0"
description = "Secure MCP runtime — policy enforcement, SSRF blocking, audit logging"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sri Sowmya Nemani"}
]
keywords = ["mcp", "security", "ssrf", "llm", "agent", "policy", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/srisowmya2000/mcp-shield"
Repository = "https://github.com/srisowmya2000/mcp-shield"

[project.scripts]
mcpshield = "runtime.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.html"]
